--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -3,12 +3,12 @@
     <string name="app_notxposed" formatted="false">Не установлен Xposed framework версии %d+</string>
     <string name="app_notenabled">Модуль XPrivacy не активирован в Xposed installer</string>
     <string name="app_wrongandroid">Только для Android версии 4.0 и выше</string>
-    <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
+    <string name="app_incompatible" formatted="false">XPrivacy не совместим с %s</string>
     <string name="app_version" formatted="false">Версия XPrivacy: %s (%d)</string>
-    <string name="app_description">The ultimate privacy manager</string>
+    <string name="app_description">Продвинутый менеджер конфиденциальности</string>
     <string name="app_xversion" formatted="false">Версия Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
-    <string name="app_licensed">Licensed, thanks for your support!</string>
+    <string name="app_licensed">Зарегистрировано, спасибо за Вашу поддержку!</string>
     <string name="menu_usage">Использование</string>
     <string name="menu_refresh">Обновить</string>
     <string name="menu_settings">Параметры</string>
@@ -22,30 +22,30 @@
     <string name="menu_pro">Pro-версия</string>
     <string name="menu_about">О программе</string>
     <string name="menu_help">Помощь</string>
-    <string name="menu_select_all">Select all</string>
-    <string name="menu_sort">Sort</string>
-    <string name="menu_filter">Filter</string>
+    <string name="menu_select_all">Выбрать всё</string>
+    <string name="menu_sort">Сортировка</string>
+    <string name="menu_filter">Фильтр</string>
     <string name="menu_all">Выделить все</string>
     <string name="menu_restriction_all">Переключить разрешения</string>
     <string name="menu_clear_all">Очистить все</string>
     <string name="menu_restrict_all">Запретить все</string>
     <string name="menu_clear_usage">Очистить</string>
-    <string name="menu_clear_db">Clear all data</string>
+    <string name="menu_clear_db">Очистить все данные</string>
     <string name="menu_usage_all">Переключить фильтр</string>
     <string name="menu_apply">Применить шаблон</string>
     <string name="menu_clear">Очистить</string>
     <string name="menu_app_launch">Запустить приложение</string>
     <string name="menu_app_settings">Настройки приложения</string>
     <string name="menu_app_store">Play Маркет</string>
-    <string name="menu_app_kill">Kill</string>
+    <string name="menu_app_kill">Завершить</string>
     <string name="menu_accounts">Выберите разрешенные учетные записи</string>
     <string name="menu_applications">Выберите разрешенные приложения</string>
     <string name="menu_contacts">Выберите разрешенные контакты</string>
     <string name="menu_tutorial">Обучение</string>
-    <string name="menu_exclude">Exclude</string>
-    <string name="menu_close">Close</string>
-    <string name="msg_abort">Aborting</string>
-    <string name="msg_aborted">Aborted</string>
+    <string name="menu_exclude">Исключить</string>
+    <string name="menu_close">Закрыть</string>
+    <string name="msg_abort">Прерывается</string>
+    <string name="msg_aborted">Прервано</string>
     <string name="msg_new">Новое</string>
     <string name="msg_update">Обновить</string>
     <string name="msg_loading">Загрузка</string>
@@ -54,23 +54,23 @@
     <string name="msg_saved_to" formatted="false">Сохранено в %s</string>
     <string name="msg_no_restrictions">Не найдено разрешений</string>
     <string name="msg_sure">Вы уверены?</string>
-    <string name="msg_select">Please select some applications</string>
-    <string name="msg_limit">Please select fewer than %d applications</string>
+    <string name="msg_select">Выберите приложения, пожалуйста</string>
+    <string name="msg_limit">Максимум приложений для выбора - %d</string>
     <string name="msg_done">Готово</string>
     <string name="msg_reboot">Требуется перезагрузка</string>
     <string name="msg_random_now">Случайные значения</string>
     <string name="msg_random_access">Случайные значения при запросе</string>
     <string name="msg_random_boot">Случайные значения после перезагрузки</string>
     <string name="msg_restart">Требуется перезапуск приложения</string>
-    <string name="msg_register">Please register your device</string>
-    <string name="msg_email">Please enter your e-mail address:</string>
-    <string name="msg_registered">Check your e-mail to activate your device</string>
-    <string name="msg_service">Update service running</string>
-    <string name="msg_migrating" formatted="false">Migrating %s</string>
-    <string name="msg_randomizing" formatted="false">Randomizing %s</string>
-    <string name="msg_upgrading" formatted="false">Upgrading %s</string>
-    <string name="msg_support_info">An internal check failed, do you want to send the support info?</string>
-    <string name="msg_restrictedby">Restricted by XPrivacy</string>
+    <string name="msg_register">Пожалуйста, зарегистрируйте своё устройство</string>
+    <string name="msg_email">Введите свой емейл, пожалуйста:</string>
+    <string name="msg_registered">Проверьте емейл, чтобы активировать устройство</string>
+    <string name="msg_service">Сервис обновлений запущен</string>
+    <string name="msg_migrating" formatted="false">Миграция %s</string>
+    <string name="msg_randomizing" formatted="false">Рандомизация %s</string>
+    <string name="msg_upgrading" formatted="false">Обновление %s</string>
+    <string name="msg_support_info">Внутренняя проверка не удалась, хотите ли вы отправить информацию для поддержки?</string>
+    <string name="msg_restrictedby">Запрещено XPrivacy</string>
     <string name="msg_first"><b>Большое внимание было уделено разработке и тестированию XPrivacy, 
 однако нельзя гарантировать, что оно будет работать безупречно на всех устройствах и со всеми приложениями.
 \n\nИспользуйте исключительно на свой страх и риск.</b>\n\nСм. также лицензию:</string>
@@ -103,29 +103,29 @@
     <string name="title_fpermission">с разрешениями</string>
     <string name="title_frestricted">запрещенные</string>
     <string name="title_fuser">пользовательские приложения</string>
-    <string name="title_fondemand">Filter by on-demand</string>
+    <string name="title_fondemand">Фильтровать по требованию</string>
     <string name="title_fsystem">системные приложения</string>
     <string name="title_fnot">Переключить</string>
-    <string name="title_sname">By name</string>
-    <string name="title_suid">By uid</string>
-    <string name="title_sinstalled">By date installed</string>
-    <string name="title_supdated">By date updated</string>
-    <string name="title_smodified">By date modified (XPrivacy)</string>
-    <string name="title_sinvert">Invert sort order</string>
-    <string name="title_attempt">Usage attempt of:</string>
-    <string name="title_category">Category:</string>
-    <string name="title_function">Function:</string>
-    <string name="title_parameters">Parameters:</string>
-    <string name="title_applycat">Apply to entire category</string>
-    <string name="title_once">Once for %1$s seconds</string>
-    <string name="title_allow">Allow</string>
-    <string name="title_deny">Deny</string>
-    <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
-    <string name="title_permissions">Permissions</string>
+    <string name="title_sname">По имени</string>
+    <string name="title_suid">По uid</string>
+    <string name="title_sinstalled">По дате установки</string>
+    <string name="title_supdated">По дате обновления</string>
+    <string name="title_smodified">По дате изменения (XPrivacy)</string>
+    <string name="title_sinvert">Инвертировать порядок сортировки</string>
+    <string name="title_attempt">Попытка использования:</string>
+    <string name="title_category">Категория:</string>
+    <string name="title_function">Функция:</string>
+    <string name="title_parameters">Параметры:</string>
+    <string name="title_applycat">Применить ко всей категории</string>
+    <string name="title_once">Раз в %1$s секунду(ы).</string>
+    <string name="title_allow">Разрешить</string>
+    <string name="title_deny">Запретить</string>
+    <string name="title_pleasesubmit">Пожалуйста, отправьте ваши разрешения, чтобы помочь остальным</string>
+    <string name="title_permissions">Разрешения</string>
     <string name="settings_serial">Серийный номер</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Долгота</string>
-    <string name="settings_alt">Altitude</string>
+    <string name="settings_alt">Высота</string>
     <string name="settings_mac">MAC-адрес</string>
     <string name="settings_ip">IP адрес</string>
     <string name="settings_phone">Номер телефона</string>
@@ -138,36 +138,36 @@
     <string name="settings_general">Общее</string>
     <string name="settings_fake_data">Фальшивые данные</string>
     <string name="settings_notify">Обновить уведомления</string>
-    <string name="settings_ondemand">Restrict on demand</string>
+    <string name="settings_ondemand">Запретить по требованию</string>
     <string name="settings_log">Отладочный лог (требует перезапуска)</string>
     <string name="settings_expert">Экспертный режим</string>
     <string name="settings_dangerous">Запрет опасных функций</string>
     <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="settings_experimental">Экспериментальные функции</string>
-    <string name="settings_https">Use secure connections</string>
-    <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
-    <string name="settings_usagedata">Show application usage data (requires restart)</string>
+    <string name="settings_https">Использовать безопасные соединения</string>
+    <string name="settings_syscomponents">Запретить системные компоненты (Android) (требует перезапуска)</string>
+    <string name="settings_usagedata">Показывать использование данных (требует перезапуска)</string>
     <string name="settings_cid">GSM Cell ID</string>
     <string name="settings_lac">GSM LAC</string>
-    <string name="help_longpress">Long press name to select</string>
-    <string name="help_ondemand">restrictions will be asked</string>
+    <string name="help_longpress">Длинное нажатие на имени для выбора</string>
+    <string name="help_ondemand">разрешения будут запрошены</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">запрашивает доступ в интернет</string>
     <string name="help_granted">имеет разрешение Android</string>
     <string name="help_used">данные уже использовались</string>
-    <string name="help_used_grayed">no usage data available</string>
+    <string name="help_used_grayed">нет данных по использованию</string>
     <string name="help_frozen">отключено</string>
     <string name="help_dangerous">изменение разрешений опасно</string>
     <string name="help_half">частично запрещено</string>
     <string name="help_attention">разрешения требуют внимания</string>
     <string name="help_restricted">разрешения изменены</string>
     <string name="help_shared">разрешения отправлены</string>
-    <string name="tutorial_mainheader">Select the category to restrict</string>
+    <string name="tutorial_mainheader">Выберите категорию для запрета</string>
     <string name="tutorial_mainlist">Тапните по чекбоксу для запрета выбранной категории для приложения\n
 \nПриложения будут получать пустые или фальшивые данные для запрещенных категорий\n
 \nТапните по иконке приложения, чтобы увидеть подробные разрешения и настройки</string>
     <string name="tutorial_detailsheader">Тапните по иконке приложения для дополнительных действий</string>
     <string name="tutorial_detailslist">Тапните по стрелке, чтобы увидеть отдельные функции и их разрешения в категории</string>
-    <string name="permission_manage">Manage applications, including killing</string>
+    <string name="permission_manage">Управление приложениями, включая завершение</string>
 
 </resources>
