--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -97,13 +97,13 @@
     <string name="restrict_shell">Команды shell (вкл. суперпользователя)</string>
     <string name="restrict_system">Система (установленные приложения)</string>
     <string name="restrict_view">Просмотр (браузер)</string>
-    <string name="whitelist_ipaddress">IP addresses</string>
-    <string name="whitelist_library">Native libraries</string>
-    <string name="whitelist_filename">File names</string>
-    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_ipaddress">IP адреса</string>
+    <string name="whitelist_library">Системные библиотеки</string>
+    <string name="whitelist_filename">Имена файлов</string>
+    <string name="whitelist_command">Команды shell</string>
     <string name="whitelist_url">URLs</string>
     <string name="title_restrict">Отметьте для запрета:</string>
-    <string name="title_check_whitelist">Check to allow</string>
+    <string name="title_check_whitelist">Отметьте для разрешения</string>
     <string name="title_fused">использовавшие данные</string>
     <string name="title_finternet">с доступом к Интернету</string>
     <string name="title_fpermission">с разрешениями</string>
