--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -8,7 +8,7 @@
     <string name="app_description">Le gestionnaire de vie privée ultime</string>
     <string name="app_xversion" formatted="false">Version de l\'environnement Xposed : %d</string>
     <string name="app_copyright">Droits d\'auteur : M. Bokhorst (M66B) \u00A9 2013–2014 </string>
-    <string name="app_licensed">Autorisé, merci pour votre soutien!</string>
+    <string name="app_licensed">Licence trouvée, merci pour votre soutien!</string>
     <string name="menu_usage">Usage</string>
     <string name="menu_refresh">Rafraîchir</string>
     <string name="menu_settings">Paramètres</string>
@@ -97,13 +97,13 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="restrict_shell">Shell (commandes, root)</string>
     <string name="restrict_system">Système (applis installées)</string>
     <string name="restrict_view">Vue (navigateur)</string>
-    <string name="whitelist_ipaddress">IP addresses</string>
-    <string name="whitelist_library">Native libraries</string>
-    <string name="whitelist_filename">File names</string>
-    <string name="whitelist_command">Shell commands</string>
+    <string name="whitelist_ipaddress">Adresses IP</string>
+    <string name="whitelist_library">Bibliothèques natives</string>
+    <string name="whitelist_filename">Noms de fichier</string>
+    <string name="whitelist_command">Commandes shell</string>
     <string name="whitelist_url">URLs</string>
     <string name="title_restrict">Cocher pour restreindre :</string>
-    <string name="title_check_whitelist">Check to allow</string>
+    <string name="title_check_whitelist">Cocher pour permettre</string>
     <string name="title_fused">Filtrer utilisation des données</string>
     <string name="title_finternet">Filtrer ayant accès à internet</string>
     <string name="title_fpermission">Filtrer par permissions</string>
@@ -124,7 +124,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="title_parameters">Paramètres:</string>
     <string name="title_applycat">Appliquer à toute la catégorie</string>
     <string name="title_once">Une fois pendant %1$s secondes</string>
-    <string name="title_whitelist">Whitelist \'%s\'</string>
+    <string name="title_whitelist">Se souvenir de \'%s\'</string>
     <string name="title_allow">Permettre</string>
     <string name="title_deny">Bloquer</string>
     <string name="title_pleasesubmit">Veuillez envoyer vos restrictions pour aider les autres</string>
